# src/Models/PromoModel.js
@@ -1,0 +1,40 @@
+import mongoose from "mongoose";
+
+const promoSchema = new mongoose.Schema(
+  {
+    name: {
+      type: String,
+      required: true,
+      trim: true,
+    },
+    couponCode: {
+      type: String,
+      required: true,
+      unique: true,
+      uppercase: true, // always stored as "SAVE20" not "save20"
+      trim: true,
+    },
+    discount: {
+      type: Number,
+      required: true,
+      min: 1,
+      max: 100,
+    },
+    maxUses: {
+      type: Number,
+      default: 1, // null = unlimited
+    },
+    usedCount: {
+      type: Number,
+      default: 0,
+    },
+    isActive: {
+      type: Boolean,
+      default: true,
+    }
+  },
+  { timestamps: true }
+);
+
+const Promo = mongoose.model("Promo", promoSchema);
+export default Promo;
